# spatial-ci

./: .Rprofile  .gitignore  ARCHITECTURE.md  README.md  SCORING.md  environment.yml  project-context.md  pyproject.toml
docs/: ARCHITECTURE.md  ARTIFACTS.md  ASSUMPTIONS.md  CLAIMS.md  CONTRACTS.md  DESIGN_DECISIONS.md  EVALUATION.md  EXPERIMENTS.md  FAILURE_MODES.md  FAQ.md  GLOSSARY.md  MANIFEST_PIPELINE.md  NON_GOALS.md  PRINCIPLES.md  REPO_SETUP.md  RESULTS_TEMPLATE.md  ROADMAP.md  SCORER_REQUIREMENTS.md  TARGETS.md  scoring.md
docs/plans/: 2026-03-10-scoring-boundary-design.md  2026-03-10-scoring-boundary-r-bridge.md  2026-03-12-manifest-pass1-leakage-audit-design.md  2026-03-12-manifest-pass1-leakage-audit.md  2026-03-12-manifest-pass1-split-foundation-design.md  2026-03-12-manifest-pass1-split-foundation.md  2026-03-16-baseline-mean-foundation-design.md  2026-03-16-baseline-mean-foundation.md  2026-03-16-manifest-pass2-materialization-design.md  2026-03-16-manifest-pass2-materialization.md  2026-03-18-baseline-knn-foundation-design.md  2026-03-18-baseline-knn-foundation.md  2026-03-21-baseline-ridge-probe-design.md  2026-03-21-baseline-ridge-probe.md
scripts/: bootstrap_renv.R  build_manifest.py  run_baselines.py  score_targets.R
src/spatial_ci/baselines/: __init__.py  artifacts.py  knn.py  mean.py  ridge.py  runner.py
src/spatial_ci/contracts/: definitions.py
src/spatial_ci/embeddings/: __init__.py  artifacts.py
src/spatial_ci/manifest/: __init__.py  artifacts.py  config.py  hashing.py  identity.py  leakage.py  materialize.py  normalize.py  pipeline.py  resolver.py  splits.py  validation.py
src/spatial_ci/scoring/: __init__.py  api.py  artifacts.py  calibration.py  packet.py  r_bridge.py  singscore.py  validators.py
src/spatial_ci/signatures/: __init__.py
tests/baselines/: test_artifacts.py  test_baseline_artifacts.py  test_knn.py  test_mean.py  test_ridge.py  test_run_baselines_cli.py  test_runner.py
tests/contracts/: test_definitions.py
tests/embeddings/: test_artifacts.py
tests/fixtures/manifest/pass1/: config_aliases.yaml  config_basic.yaml  config_duplicate.yaml  config_leakage.yaml  metadata_aliases.csv  metadata_basic.csv  metadata_duplicate.csv  metadata_leakage.csv
tests/fixtures/manifest/pass2/: config_materialize.yaml  config_materialize_missing.yaml  metadata_materialize.csv  metadata_materialize_missing.csv
tests/fixtures/manifest/pass2/sample-root/spot-1/: image.tiff
tests/fixtures/manifest/pass2/sample-root/spot-1/derived/: expression.h5ad
tests/fixtures/manifest/pass2/sample-root/spot-1/outs/: filtered_feature_bc_matrix.h5
tests/fixtures/manifest/pass2/sample-root/spot-1/outs/spatial/: scalefactors_json.json  tissue_positions_list.csv
tests/fixtures/manifest/pass2/sample-root/spot-2/outs/: filtered_feature_bc_matrix.h5
tests/fixtures/manifest/pass2/sample-root/spot-missing/outs/: filtered_feature_bc_matrix.h5
tests/golden/: test_mad_calibration.py  test_score_artifact_roundtrip.py  test_singscore_parity.py
tests/golden/fixtures/singscore/: detected_membership.parquet  expression_input.csv  scoring_request.json  signature_input.json
tests/manifest/: test_build_manifest_cli.py  test_config.py  test_hashing.py  test_identity.py  test_leakage.py  test_manifest_artifacts.py  test_materialize.py  test_normalize.py  test_pipeline.py  test_resolver.py  test_splits.py  test_validation.py
tests/scoring/: test_artifacts.py  test_calibration.py  test_packet.py  test_packet_contract.py  test_public_api.py  test_r_bridge.py  test_singscore_adapter.py
(+4 files in other folders)
