[project]
name = "spatial-ci"
version = "0.1.0"
description = "Contract-driven validation for virtual spatial transcriptomics and multimodal pathology AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Mike Hamilton" }
]

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_ci"]

# We keep standard project metadata here,
# and use unidep as the dependency source of truth.
[tool.unidep]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# Important:
# - prefer conda for compiled scientific/system deps
# - keep package editable install in pip
# - keep GPU-only extras out of the base set
dependencies = [
  "python >=3.11,<3.12",
  "pip",
  "numpy >=1.26,<3",
  "scipy >=1.13,<2",
  "pandas >=2.2,<3",
  "polars >=1.8,<2",
  "pyarrow >=17,<20",
  "pydantic >=2.8,<3",
  "anndata >=0.10,<0.12",
  "scanpy >=1.10,<2",
  "pillow >=10,<12",

  # Imaging / pathology IO
  { conda = "openslide" },
  { conda = "openslide-python" },

  # PyTorch base stack
  "pytorch >=2.4,<3",
  "torchvision >=0.19,<1",

  # R runtime for singscore step
  "r-base >=4.3,<4.5",
  "r-renv",
  "r-devtools",
  "r-remotes",
  { conda = "bioconductor-biocmanager" },

  # Editable install of this package
  { pip = "-e ." },
]

optional_dependencies = { 
  dev = [
    "pytest >=8,<9",
    "pytest-cov >=5,<6",
    "ruff >=0.6,<1",
    "mypy >=1.11,<2"
  ],
  bayes = [
    # PyMC docs still recommend conda-style installs for the scientific stack.
    "pymc >=5,<6"
  ],
  gpu_linux = [
    "cucim ==23.10.0:linux64"
  ]
}

# Tell unidep how to interpret [project.dependencies].
# Using "ignore" keeps the dependency truth centralized in [tool.unidep].
project_dependency_handling = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["spatial_ci"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
mypy_path = ["src"] 
