[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-ci"
version = "0.1.0"
description = "A contract-driven, leakage-resistant research platform for virtual spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Spatial-CI Contributors" },
]
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "openslide-python>=1.3.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "hypothesis>=6.151.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_ci"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
